fix cuber centering on IOS

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -177,8 +177,8 @@ $icon-size-social: 18px;
 }
 
 %full-screen {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
     position: absolute;
     top: 0;
